questions.txt
Editor is a person who creates a program. He creates a program and stores it in a disk.
What is a disk?
Disk is a hard round magnetic plate which is cappable of storing an information and we can edit it whenever we want that we can
write in it as many times we want.
The information which is stored or saved in a disk is processed or read by a preprocessor program which processes the program.
Preprocessor program is a program which processes the input given to it and gives the relavent output.
Next comes the compiler the compiler creates an object code and stores it again on the disk.
What is an object code?
Object code is the output of a compiler after it processes source code. Source code is
the version of a computer program as it is originally written (i.e., typed into a computer)
by a human in a programming language. A compiler is a specialized program that converts source code into object code.
Compiler takes the code or the input which we give to the computer which is called the source code then it processes the program
and gives the output which is called a source code which is stored in the disk.
Then comes the linker which links the object code into the system library creating a file which can be executed and then stored in the disk.
An executable file is a file that is used to perform various functions or operations on a computer. Unlike a data file, an executable file cannot be read because it has been compiled. 
Then the loader takes the executable file from the disks and stores it in the primary memory of the computer.
Then the intructions from the primary memoery is taken by the cpu and then excecuted.
How does the preprocessor program process the code?
How does the CPU executes the program
It all happens in six steps 
-first step the cpu fetches the information from the main memory 
-the instruction from the memory is decoded by the decoder
-the required operation is done like addition or subtraction etc when the input of the required numbers is given.
-and the output is returned to the register file
addition program
#include <stdio.h>
int main(void)
{
  int integer 1;
  int integer 2;
  int sum;
  printf("Enter first integer/n");
  scanf("%d",&integer 1);
  printf("Enter second integer/n");
  scanf("%d",integer 2);
  sum=integer 1+ integer 2;
  scanf("sum is %d",sum);
  return 0;
  }
  the correct code is 
  #include <stdio.h>


int main(void)

{
  int integer1;
  int integer2;
  int sum;
  printf("Enter first integer/n");
  scanf("%d",&integer1);
  printf("Enter second integer/n");
  scanf("%d",&integer2);
  sum=integer1+integer2;
  printf("sum is %d",sum);
  
  
  }
  the errors were 
  -didnt add & before interger 2 
  -wrote scanf instead of printf
  -left space between integer and 1
  The error was
  main.c: In function 'main':
main.c:15:15: error: expected '=', ',', ';', 'asm' or '__attribute__' before numeric constant
   int integer 1;
               ^
main.c:16:15: error: expected '=', ',', ';', 'asm' or '__attribute__' before numeric constant
   int integer 2;
               ^
main.c:19:15: error: 'integer1' undeclared (first use in this function)
   scanf("%d",&integer1);
               ^
main.c:19:15: note: each undeclared identifier is reported only once for each function it appears in
main.c:21:15: error: 'integer' undeclared (first use in this function)
   scanf("%d",&integer 2);
               ^
main.c:21:23: error: expected ')' before numeric constant
   scanf("%d",&integer 2);
                       ^
main.c:22:15: error: expected ';' before numeric constant
   sum=integer 1+integer 2;
               ^
main.c:23:9: warning: format '%d' expects argument of type 'int *', but argument 2 has type 'int' [-Wformat=]
   scanf("sum is %d",sum);
         ^
main.c:23:3: warning: ignoring return value of 'scanf', declared with attribute warn_unused_result [-Wunused-result]
   scanf("sum is %d",sum);
   ^
 What is a variable?
 variable can take any value given it is viable to change it does not have a fixed value.
 in programming variables are used to store information to be referenced and used by the programs.
 what is the type of a variable?
 giving the name to the variable or giving it specification
 There are five basic data types associated with variables:

     int - integer: a whole number.
    float - floating point value: ie a number with a fractional part.
    double - a double-precision floating point value.
    char - a single character.
    void - valueless special purpose type which we will examine closely in later sections.
